--- a/.github/workflows/ci-cd.dev.yml
+++ b/.github/workflows/ci-cd.dev.yml
@@ -165,7 +165,7 @@ jobs:
   #       run: docker push ghcr.io/ismail-mouyahada/sat-square:dev-${{ github.sha }}
 
   e2e-tests:
-    needs: docker-build
+    # needs: docker-build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
