--- a/.github/workflows/ci-cd.dev.yml
+++ b/.github/workflows/ci-cd.dev.yml
@@ -180,10 +180,12 @@ jobs:
           export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
           export REDIS_URL="redis://localhost:6379"
           cd ./satsquare
-          npm install
-          npx prisma migrate
-          npx prisma db psuh
-          npm run seed
+      - name: Install dependencies
+        run: | 
+            npm install
+            npx prisma migrate
+            npx prisma db push
+            npm run seed
 
       - name: Run end-to-end tests
         run: |
