--- a/.github/workflows/ci-cd.dev.yml
+++ b/.github/workflows/ci-cd.dev.yml
@@ -35,7 +35,7 @@ jobs:
           npm run lint
 
   build:
-    needs: [lint]
+    # needs: [lint]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
