--- a/.github/workflows/ci-cd.dev.yml
+++ b/.github/workflows/ci-cd.dev.yml
@@ -19,151 +19,138 @@ env:
 jobs:
  
 
-  # build:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
-
-  #     - name: Run end-to-end tests
-  #       run: |
-  #         export DATABASE_URL=postgresql://dev:tT8s758l79WDINR8tKHtfKBr1oiWXpWY@dpg-cr7ervi3esus7388bamg-a.frankfurt-postgres.render.com/dev_db_satsquare
-  #         export NEXTAUTH_SECRET="CP912ECDSClsdezoPDZCMSJXCPISJCIY20SmfdsFOYDflHZORdsvdsFOZIRGOIZHGOURHZ"
-  #         export NEXT_PUBLIC_LNURL_AUTH_PUBLIC_KEY="02c3b844b8104f0c1b15c507774c9ba7fc609f58f343b9b149122e944dd20c9362"
-  #         export NEXT_PUBLIC_SITE_URL="http://localhost:3000"
-  #         export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
-  #         export REDIS_URL="redis://localhost:6379"
-  #         cd ./satsquare
-
-  #         npm install
-  #         npx prisma generate
-  #         npx prisma db push
-  #         npm run seed
-  #         npm run build
-  # lint:
-  #   needs: [build]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
-
-  #     - name: Install dependencies
-  #       run: |
-  #         cd ./satsquare
-  #         npm ci
-
-  #     - name: Run Linting
-  #       run: |
-  #         cd ./satsquare
-  #         npm run lint
-  # unit-tests:
-  #   needs: [build]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
-
-  #     - name: Install dependencies
-  #       run: |
-  #         cd ./satsquare
-  #         npm ci
-  #         npm i jest-environment-jsdom jest
-
-  #     - name: Run Jest Unit Tests
-  #       run: |
-  #         cd ./satsquare
-  #         npm run test
-
-  # e2e-tests:
-  #   needs: [build]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
-
-  #     - name: Run end-to-end tests
-  #       run: |
-  #         export DATABASE_URL=postgresql://dev:tT8s758l79WDINR8tKHtfKBr1oiWXpWY@dpg-cr7ervi3esus7388bamg-a.frankfurt-postgres.render.com/dev_db_satsquare
-  #         export NEXTAUTH_SECRET="CP912ECDSClsdezoPDZCMSJCIY20SmfdsFOYDflHZORdsvdsFOZIRGOIZHGOURHZ"
-  #         export NEXT_PUBLIC_LNURL_AUTH_PUBLIC_KEY="02c3b844b8104f0c1b15c507774c9ba7fc609f58f343b9b149122e944dd20c9362"
-  #         export NEXT_PUBLIC_SITE_URL="http://localhost:3000"
-  #         export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
-  #         export REDIS_URL="redis://localhost:6379"
-  #         cd ./satsquare
-
-  #         npm install
-  #         npx prisma generate
-  #         npx prisma db push
-  #         npm run seed
-  #         npm run build
-  #         # npm run test:e2e
-
-  # deps-vulnerability:
-  #   needs: [e2e-tests, build, unit-tests]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
-
-  #     - name: Create lock file
-  #       run: |
-  #         cd ./satsquare
-  #         npm install --package-lock-only
-
-  #     - name: Install dependencies
-  #       run: |
-  #         cd ./satsquare
-  #         npm ci
-  #         npm update
-
-  #     - name: Install jest-environment-jsdom
-  #       run: |
-  #         cd ./satsquare
-  #         npm install jest-environment-jsdom --save-dev
-
-  #     - name: Audit npm dependencies
-  #       run: |
-  #         cd ./satsquare
-  #         npm audit --audit-level=moderate
-
-  # codecov:
-  #   needs: [e2e-tests, build, unit-tests]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
-
-  #     - name: Install dependencies
-  #       run: |
-  #         cd ./satsquare
-  #         npm ci
-  #         npm i jest-environment-jsdom jest
-
-  #     - name: Run tests and generate coverage report
-  #       run: |
-  #         cd ./satsquare
-  #         npm run test -- --coverage
-
-  #     - name: Upload coverage to Codecov
-  #       uses: codecov/codecov-action@v3
-  #       with:
-  #         token: ${{ secrets.CODECOV_TOKEN }}
-
-  security:
-    # needs: [e2e-tests, build, unit-tests]
+  build:
     runs-on: ubuntu-latest
     steps:
-          - uses: actions/checkout@v4
-            with:
-              # Disabling shallow clone is recommended for improving relevancy of reporting
-              fetch-depth: 0
-          - name: SonarCloud Scan
-            uses: sonarsource/sonarcloud-github-action@v3.0.0 # Ex: v2.1.0, See the latest version at https://github.com/marketplace/actions/sonarcloud-scan
-            env:
-              SONAR_TOKEN: '859694093c1e15aa22f0a01bd5192bfb22a77887'
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Run end-to-end tests
+        run: |
+          export DATABASE_URL=postgresql://dev:tT8s758l79WDINR8tKHtfKBr1oiWXpWY@dpg-cr7ervi3esus7388bamg-a.frankfurt-postgres.render.com/dev_db_satsquare
+          export NEXTAUTH_SECRET="CP912ECDSClsdezoPDZCMSJXCPISJCIY20SmfdsFOYDflHZORdsvdsFOZIRGOIZHGOURHZ"
+          export NEXT_PUBLIC_LNURL_AUTH_PUBLIC_KEY="02c3b844b8104f0c1b15c507774c9ba7fc609f58f343b9b149122e944dd20c9362"
+          export NEXT_PUBLIC_SITE_URL="http://localhost:3000"
+          export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
+          export REDIS_URL="redis://localhost:6379"
+          cd ./satsquare
+
+          npm install
+          npx prisma generate
+          npx prisma db push
+          npm run seed
+          npm run build
+  lint:
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Install dependencies
+        run: |
+          cd ./satsquare
+          npm ci
+
+      - name: Run Linting
+        run: |
+          cd ./satsquare
+          npm run lint
+  unit-tests:
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Install dependencies
+        run: |
+          cd ./satsquare
+          npm ci
+          npm i jest-environment-jsdom jest
+
+      - name: Run Jest Unit Tests
+        run: |
+          cd ./satsquare
+          npm run test
+
+  e2e-tests:
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Run end-to-end tests
+        run: |
+          export DATABASE_URL=postgresql://dev:tT8s758l79WDINR8tKHtfKBr1oiWXpWY@dpg-cr7ervi3esus7388bamg-a.frankfurt-postgres.render.com/dev_db_satsquare
+          export NEXTAUTH_SECRET="CP912ECDSClsdezoPDZCMSJCIY20SmfdsFOYDflHZORdsvdsFOZIRGOIZHGOURHZ"
+          export NEXT_PUBLIC_LNURL_AUTH_PUBLIC_KEY="02c3b844b8104f0c1b15c507774c9ba7fc609f58f343b9b149122e944dd20c9362"
+          export NEXT_PUBLIC_SITE_URL="http://localhost:3000"
+          export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
+          export REDIS_URL="redis://localhost:6379"
+          cd ./satsquare
+
+          npm install
+          npx prisma generate
+          npx prisma db push
+          npm run seed
+          npm run build
+          # npm run test:e2e
+
+  deps-vulnerability:
+    needs: [e2e-tests, build, unit-tests]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Create lock file
+        run: |
+          cd ./satsquare
+          npm install --package-lock-only
+
+      - name: Install dependencies
+        run: |
+          cd ./satsquare
+          npm ci
+          npm update
+
+      - name: Install jest-environment-jsdom
+        run: |
+          cd ./satsquare
+          npm install jest-environment-jsdom --save-dev
+
+      - name: Audit npm dependencies
+        run: |
+          cd ./satsquare
+          npm audit --audit-level=moderate
+
+  codecov:
+    needs: [e2e-tests, build, unit-tests]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Install dependencies
+        run: |
+          cd ./satsquare
+          npm ci
+          npm i jest-environment-jsdom jest
+
+      - name: Run tests and generate coverage report
+        run: |
+          cd ./satsquare
+          npm run test -- --coverage
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   lighthouse:
-    # needs: [codecov, security, deps-vulnerability]
+    needs: [codecov, deps-vulnerability]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -212,30 +199,32 @@ jobs:
           webhookUrl: "https://discord.com/api/webhooks/1278096229351293008/UdVm3whQn9wb_neR4tuS5TGFfFzaiAo4Jijwa0yuEks1GwoVdrV-lcsdvw5qlA0Kq9CN"
           message: "C'était presque bon mon kiki ! 😇"
 
-# docker-build:
-#   # needs: lighthouse
-#   runs-on: ubuntu-latest
-#   steps:
-#     - name: Checkout code
-#       uses: actions/checkout@v3
-
-#     - name: Login to GitHub Container Registry
-#       run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-
-#     - name: Build Docker image
-#       run: |
-#         cd ./satsquare
-#         docker run -e DATABASE_URL="${{ secrets.DATABASE_URL }}" \
-#          -e NEXTAUTH_SECRET="${{ secrets.NEXTAUTH_SECRET }}" \
-#          -e NEXT_PUBLIC_SITE_URL="${{ secrets.NEXT_PUBLIC_SITE_URL }}" \
-#          -e NEXT_PUBLIC_SOCKET_URL="${{ secrets.NEXT_PUBLIC_SOCKET_URL }}" \
-#          -p 3000:3000 -p 5157:5157
-#         docker build -t ghcr.io/ismail-mouyahada/sat-square:dev-${{ github.sha }} -f Dockerfile.dev .
-
-#     - name: Scan Docker image for vulnerabilities
-#       uses: aquasecurity/trivy-action@0.20.0
-#       with:
-#         image-ref: ghcr.io/ismail-mouyahada/sat-square:dev-${{ github.sha }}
-
-#     - name: Push Docker image to GitHub Container Registry
-#       run: docker push ghcr.io/ismail-mouyahada/sat-square:dev-${{ github.sha }}
+  docker-build:
+    needs: lighthouse
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+  
+      - name: Login to GitHub Container Registry
+        run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+  
+      - name: Build Docker image
+        run: |
+          cd ./satsquare
+          export DATABASE_URL=postgresql://dev:tT8s758l79WDINR8tKHtfKBr1oiWXpWY@dpg-cr7ervi3esus7388bamg-a.frankfurt-postgres.render.com/dev_db_satsquare
+          export NEXTAUTH_SECRET="CP912ECDSClsdezoPDZCMSJCIY20SmfdsFOYDflHZORdsvdsFOZIRGOIZHGOURHZ"
+          export NEXT_PUBLIC_LNURL_AUTH_PUBLIC_KEY="02c3b844b8104f0c1b15c507774c9ba7fc609f58f343b9b149122e944dd20c9362"
+          export NEXT_PUBLIC_SITE_URL="http://localhost:3000"
+          export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
+          export REDIS_URL="redis://localhost:6379"
+          docker-compose up -d
+          docker build -t ghcr.io/ismail-mouyahada/sat-square:dev-${{ github.sha }} -f Dockerfile  .
+  
+      - name: Scan Docker image for vulnerabilities
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          image-ref: ghcr.io/ismail-mouyahada/sat-square:dev-${{ github.sha }}
+  
+      - name: Push Docker image to GitHub Container Registry
+        run: docker push ghcr.io/ismail-mouyahada/sat-square:dev-${{ github.sha }}
